Solidify default layout

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,1 +1,34 @@
-<p>Welcome to my node example server</p>
+<center>
+  <p>Welcome to my node example server</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+  <p>This is the Homepage</p>
+</center>
