--- a/app/views/docker.html
+++ b/app/views/docker.html
@@ -54,7 +54,7 @@
 </p>
 <code>git pull origin main</code>
 <p>
-  Which should be relatively quick. Once completed, your previously emopty
+  Which should be relatively quick. Once completed, your previously empty
   project directory will be filled with the source code for your project.
 </p>
 
@@ -102,7 +102,7 @@
   If this doesn't work, it may be due to a firewall restriction on your server.
   You can remove this restriction with the following command:
 </p>
-<code>sudo ufe allow ${HOST PORT}</code>
+<code>sudo ufw allow ${HOST PORT}</code>
 <p>
   Once you can access your server from another device, you can rest assured
   knowing that you took all these steps properly and have successfully created a
