Rearrange guides and demos

--- a/app/views/guides/nodejs.html
+++ b/app/views/guides/nodejs.html
@@ -107,3 +107,10 @@
 ><br />
 <code>res.write(content);</code><br />
 <code>res.end();</code><br />
+<p>
+  When you navigate back to the page, it should display your html page rather
+  than hardcoded strings in JS. But that's the basics of Node for webpages. If
+  you are feeling ambitious, try to figure out how to get your header and footer
+  into standalone files and use them with each request so changes to the layout
+  only have to be made in one place.
+</p>
