--- a/app/views/partial/header.html
+++ b/app/views/partial/header.html
@@ -44,10 +44,16 @@
                 <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/guides">Guides</a>
+                <a class="nav-link" href="/nodejs">NodeJS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/demos">Demos</a>
+                <a class="nav-link" href="/bootstrap">Bootstrap</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/typescript">Typescript</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/docker">Docker</a>
               </li>
             </ul>
           </div>
