Create dir reading iframe

--- a/app/views/demos.html
+++ b/app/views/demos.html
@@ -2,7 +2,7 @@
   <h3>Demos</h3>
   <hr />
 
-  <!-- <a href="/demos/nodejs">
-    <button class="btn btn-info"><h4>NodeJS</h4></button>
-  </a> -->
+  <a href="/demos/sort">
+    <button class="btn btn-info"><h4>Sort</h4></button>
+  </a>
 </center>
