Create working file movement demo

--- a/app/views/demos/sort.html
+++ b/app/views/demos/sort.html
@@ -3,4 +3,23 @@
   of interest, chiefly 'input' and 'output'. Click the button below to see a
   list of all files in the input folder.
 </p>
-<iframe src="/demos/sort/iframe/input-dir" frameborder="0"></iframe>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <h3>Input Directory</h3>
+      <iframe src="/demos/sort/iframe/input" frameborder="1"></iframe>
+    </div>
+    <div class="col-sm">
+      <h3>Functions</h3>
+      <iframe src="/demos/sort/iframe/functions" frameborder="1"></iframe>
+    </div>
+    <div class="col-sm">
+      <h3>Output: PASS</h3>
+      <iframe src="/demos/sort/iframe/output/pass" frameborder="1"></iframe>
+    </div>
+    <div class="col-sm">
+      <h3>Output: FAIL</h3>
+      <iframe src="/demos/sort/iframe/output/fail" frameborder="1"></iframe>
+    </div>
+  </div>
+</div>
