Complete sort demo first draft

--- a/app/views/demos/sort-functions.html
+++ b/app/views/demos/sort-functions.html
@@ -1,2 +1,2 @@
-<a style="float: left" href="/demos/sort/iframe/functions/sort">SORT</a>
-<a style="float: right" href="/demos/sort/iframe/functions/unsort">UNSORT</a>
+<a href="/demos/sort/iframe/functions/sort">SORT</a> <br /><br />
+<a href="/demos/sort/iframe/functions/unsort">UNSORT</a>
