--- a/app/views/demos/sort.html
+++ b/app/views/demos/sort.html
@@ -1,25 +1,46 @@
 <p>
   This demo will showcase some file sorting. The server has a couple directories
-  of interest, chiefly 'input' and 'output'. Click the button below to see a
-  list of all files in the input folder.
+  of interest, chiefly 'input' and 'output'. 'output' has two subfolders, 'pass'
+  and 'fail'. Below you can see several readouts of the directories in question
+  involving the files within. The SORT function scans the input directory for
+  .txt files, ignoring other filetypes. If the text file containts the character
+  '3', the file gets moved to 'output/pass'. If not, they go to 'output/fail'.
+  Click the links below to see it in action, but keep in mind that you'll have
+  to click refresh in each directory to get a live view.
 </p>
 <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col">
       <h3>Input Directory</h3>
-      <iframe src="/demos/sort/iframe/input" frameborder="1"></iframe>
+      <iframe
+        src="/demos/sort/iframe/input"
+        frameborder="1"
+        style="width: 32vw"
+      ></iframe>
     </div>
-    <div class="col-sm">
+    <div class="col">
       <h3>Functions</h3>
-      <iframe src="/demos/sort/iframe/functions" frameborder="1"></iframe>
+      <iframe
+        src="/demos/sort/iframe/functions"
+        frameborder="1"
+        style="width: 32vw"
+      ></iframe>
     </div>
-    <div class="col-sm">
+    <div class="col">
       <h3>Output: PASS</h3>
-      <iframe src="/demos/sort/iframe/output/pass" frameborder="1"></iframe>
+      <iframe
+        src="/demos/sort/iframe/output/pass"
+        frameborder="1"
+        style="width: 32vw"
+      ></iframe>
     </div>
-    <div class="col-sm">
+    <div class="col">
       <h3>Output: FAIL</h3>
-      <iframe src="/demos/sort/iframe/output/fail" frameborder="1"></iframe>
+      <iframe
+        src="/demos/sort/iframe/output/fail"
+        frameborder="1"
+        style="width: 32vw"
+      ></iframe>
     </div>
   </div>
 </div>
