Finalize for bind mount testing

--- a/app/views/demos/sort.html
+++ b/app/views/demos/sort.html
@@ -5,9 +5,9 @@
   involving the files within. The SORT function scans the input directory for
   .txt files, ignoring other filetypes. If the text file contains the character
   '3', the file gets moved to 'output/pass'. If not, they go to 'output/fail'.
-  Click the links below to execute the functions and see it in action, but keep
-  in mind that you'll have to click refresh in each directory to get a live
-  view.
+  UNSORT puts the txt files back in input. Click the links below to execute the
+  functions and see it in action, but keep in mind that you'll have to click
+  refresh in each directory to get a live view.
 </p>
 <div class="container">
   <div class="row">
