Add persistent storage guide

--- a/app/views/guides.html
+++ b/app/views/guides.html
@@ -11,7 +11,10 @@
   <a href="/guides/typescript">
     <button class="btn btn-info"><h4>Typescript</h4></button>
   </a> -->
-  <a href="/guides/docker">
-    <button class="btn btn-info"><h4>Docker</h4></button>
+  <a href="/guides/docker/getting-started">
+    <button class="btn btn-info"><h4>Docker - Getting Started</h4></button>
+  </a>
+  <a href="/guides/docker/persistent-storage">
+    <button class="btn btn-info"><h4>Docker - Persistent Storage</h4></button>
   </a>
 </center>
