--- a/app/views/guides/docker/persistent-storage.html
+++ b/app/views/guides/docker/persistent-storage.html
@@ -5,3 +5,8 @@
   termination of the process. This demo will show you how to write files to host
   memory from within the container.
 </p>
+<p>
+  If you have a file structure in your application that you want to use, then
+  use the following command when you want to run your Docker container
+</p>
+<code>docker run -v ${HOST PATH}:${CONTAINER PATH}</code>
