Create cyclic validator demo

--- a/app/views/demos.html
+++ b/app/views/demos.html
@@ -5,4 +5,7 @@
   <a href="/demos/sort">
     <button class="btn btn-info"><h4>Sort</h4></button>
   </a>
+  <a href="/demos/validator">
+    <button class="btn btn-info"><h4>Validator</h4></button>
+  </a>
 </center>
