--- a/app/views/demos/validator-iframe.html
+++ b/app/views/demos/validator-iframe.html
@@ -12,6 +12,11 @@
       crossorigin="anonymous"
     />
     <title>iframe</title>
+    <style>
+      body {
+        background-color: lightgrey;
+      }
+    </style>
   </head>
   <body></body>
 </html>
