Expand pass criteria

--- a/app/views/demos/validator-index.html
+++ b/app/views/demos/validator-index.html
@@ -18,7 +18,7 @@
   <div class="row justify-content-md-center">
     <div class="col">
       <center>
-        <h3>Input Directory</h3>
+        <h3>Input Directory (/root/project/data/input on host)</h3>
         <iframe
           src="/demos/validator/iframe/input"
           height="400"
@@ -34,7 +34,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h3>Error</h3>
+        <h3>Error (files with no extension)</h3>
         <iframe
           src="/demos/validator/iframe/error"
           height="400"
@@ -43,7 +43,7 @@
         ></iframe>
       </div>
       <div class="col">
-        <h3>Fail</h3>
+        <h3>Fail (.txt does not contain 1, 2, 3, or 4)</h3>
         <iframe
           src="/demos/validator/iframe/fail"
           height="400"
@@ -54,7 +54,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <h3>Ignore</h3>
+        <h3>Ignore (has extension but is not .txt file)</h3>
         <iframe
           src="/demos/validator/iframe/ignore"
           height="400"
@@ -63,7 +63,7 @@
         ></iframe>
       </div>
       <div class="col">
-        <h3>Pass</h3>
+        <h3>Pass (.txt file that contains 1, 2, 3, or 4)</h3>
         <iframe
           src="/demos/validator/iframe/pass"
           height="400"
