Rename Validator to Text Validator

--- a/src/views/demos/demos.html
+++ b/src/views/demos/demos.html
@@ -2,7 +2,7 @@
   <h3>Demos</h3>
   <hr />
 
-  <a href="/demos/validator">
-    <button class="btn btn-info"><h4>Validator</h4></button>
+  <a href="/demos/text-validator">
+    <button class="btn btn-info"><h4>Text Validator</h4></button>
   </a>
 </center>
