--- a/src/views/demos/text-validator/text-validator.html
+++ b/src/views/demos/text-validator/text-validator.html
@@ -12,7 +12,7 @@
 
 <hr />
 <center>
-  <a href="/demos/validator/start"
+  <a href="/demos/text-validator/start"
     ><button class="btn btn-primary">Begin Validator Demo</button></a
   >
 </center>
@@ -25,7 +25,7 @@
         <h3>Input Directory</h3>
         <i>(/root/project/data/input on host)</i><br />
         <iframe
-          src="/demos/validator/iframe/input"
+          src="/demos/text-validator/iframe/input"
           height="400"
           width="800"
           frameborder="1"
@@ -42,7 +42,7 @@
         <h3>Error</h3>
         <i>(files with no extension)</i>
         <iframe
-          src="/demos/validator/iframe/error"
+          src="/demos/text-validator/iframe/error"
           height="400"
           width="400"
           frameborder="1"
@@ -52,7 +52,7 @@
         <h3>Fail</h3>
         <i>(.txt does not contain 1, 2, 3, or 4)</i>
         <iframe
-          src="/demos/validator/iframe/fail"
+          src="/demos/text-validator/iframe/fail"
           height="400"
           width="400"
           frameborder="1"
@@ -64,7 +64,7 @@
         <h3>Ignore</h3>
         <i>(has extension but is not .txt file)</i>
         <iframe
-          src="/demos/validator/iframe/ignore"
+          src="/demos/text-validator/iframe/ignore"
           height="400"
           width="400"
           frameborder="1"
@@ -74,7 +74,7 @@
         <h3>Pass</h3>
         <i>(.txt file that contains 1, 2, 3, or 4)</i>
         <iframe
-          src="/demos/validator/iframe/pass"
+          src="/demos/text-validator/iframe/pass"
           height="400"
           width="400"
           frameborder="1"
