Working basic console demo

--- a/src/views/demos/demos.html
+++ b/src/views/demos/demos.html
@@ -5,4 +5,7 @@
   <a href="/demos/text-validator">
     <button class="btn btn-info"><h4>Text Validator</h4></button>
   </a>
+  <a href="/demos/xml-validator">
+    <button class="btn btn-info"><h4>XML Validator</h4></button>
+  </a>
 </center>
