--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -15,3 +15,69 @@
   >
 </center>
 <hr />
+
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col">
+      <center>
+        <h3>Input Directory</h3>
+        <i>(/root/project/data/input on host)</i><br />
+        <iframe
+          src="/demos/text-validator/iframe/input"
+          height="400"
+          width="800"
+          frameborder="1"
+        ></iframe>
+      </center>
+    </div>
+  </div>
+</div>
+<hr />
+<center>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h3>Error</h3>
+        <i>(files with no extension)</i>
+        <iframe
+          src="/demos/text-validator/iframe/error"
+          height="400"
+          width="400"
+          frameborder="1"
+        ></iframe>
+      </div>
+      <div class="col">
+        <h3>Fail</h3>
+        <i>(.txt does not contain 1, 2, 3, or 4)</i>
+        <iframe
+          src="/demos/text-validator/iframe/fail"
+          height="400"
+          width="400"
+          frameborder="1"
+        ></iframe>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h3>Ignore</h3>
+        <i>(has extension but is not .txt file)</i>
+        <iframe
+          src="/demos/text-validator/iframe/ignore"
+          height="400"
+          width="400"
+          frameborder="1"
+        ></iframe>
+      </div>
+      <div class="col">
+        <h3>Pass</h3>
+        <i>(.txt file that contains 1, 2, 3, or 4)</i>
+        <iframe
+          src="/demos/text-validator/iframe/pass"
+          height="400"
+          width="400"
+          frameborder="1"
+        ></iframe>
+      </div>
+    </div>
+  </div>
+</center>
