--- a/src/views/demos/text-validator/text-validator.html
+++ b/src/views/demos/text-validator/text-validator.html
@@ -13,7 +13,7 @@
 <hr />
 <center>
   <a href="/demos/text-validator/start"
-    ><button class="btn btn-primary">Begin Validator Demo</button></a
+    ><button class="btn btn-primary">Initiate Text Validator Demo</button></a
   >
 </center>
 <hr />
