--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -11,7 +11,7 @@
 <hr />
 <center>
   <a href="/demos/xml-validator/start"
-    ><button class="btn btn-primary">Begin Validator Demo</button></a
+    ><button class="btn btn-primary">Execute XML Validator Demo</button></a
   >
 </center>
 <hr />
