--- a/src/views/guides/guides.html
+++ b/src/views/guides/guides.html
@@ -2,8 +2,8 @@
   <h3>Guides</h3>
   <hr />
 
-  <a href="/guides/nodejs">
-    <button class="btn btn-info"><h4>NodeJS</h4></button>
+  <a href="/guides/nodejs/getting-started">
+    <button class="btn btn-info"><h4>NodeJS - Getting Started</h4></button>
   </a>
   <!-- <a href="/guides/bootstrap">
     <button class="btn btn-info"><h4>Bootstrap</h4></button>
@@ -16,5 +16,10 @@
   </a>
   <a href="/guides/docker/persistent-storage">
     <button class="btn btn-info"><h4>Docker - Persistent Storage</h4></button>
+  </a>
+  <a href="/guides/nodejs/xmllint">
+    <button class="btn btn-info">
+      <h4>NodeJS - the xmllint Package</h4>
+    </button>
   </a>
 </center>
