Update demo descriptions

--- a/src/views/demos/text-validator/text-validator.html
+++ b/src/views/demos/text-validator/text-validator.html
@@ -3,7 +3,7 @@
   directories of interest, chiefly 'input' and 'output'. 'output' has four
   subfolders, 'error', 'fail', 'ignore', and 'pass'. Below you can see several
   readouts of the directories in question involving the files within. The
-  directory iframes always refresh every 1 second. Once the demo starts, a
+  directory iframes always refresh every 10 seconds. Once the demo starts, a
   generator script creates a text file with five random characters every two
   seconds, and a validator script checks and moves everything in the input
   directory every eight seconds. The Click the button below to initiate the
