--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -3,7 +3,7 @@
   directories of interest, chiefly 'input' and 'output'. 'output' has four
   subfolders, 'error', 'fail', 'ignore', and 'pass'. Below you can see several
   readouts of the directories in question involving the files within. The
-  directory iframes always refresh every 1 second. Once the demo starts, a
+  directory iframes always refresh every 10 seconds. Once the demo starts, a
   script will check the xml file against the xsd file. The Click the button
   below to initiate the demo.
 </p>
