Create functional upload form

--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -28,6 +28,12 @@
           width="800"
           frameborder="1"
         ></iframe>
+        <br />
+        <b>Upload to input</b>
+        <form action="/upload" method="post" enctype="multipart/form-data">
+          <input type="file" name="fileupload" />
+          <input type="submit" />
+        </form>
       </center>
     </div>
   </div>
