Integrate xml cycler into base server startup

--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -3,9 +3,9 @@
   directories of interest, chiefly 'input' and 'output'. 'output' has four
   subfolders, 'error', 'fail', 'ignore', and 'pass'. Below you can see several
   readouts of the directories in question involving the files within. The
-  directory iframes always refresh every 10 seconds. Once the demo starts, a
-  script will check the xml file against the xsd file. The Click the button
-  below to initiate the demo.
+  directory iframes always refresh every 4 seconds. You can upload files to
+  input and you can download any of the files you see by clicking on them. The
+  validator executes in the background every eight seconds.
 </p>
 
 <hr />
