Deprecate text validator

--- a/src/views/demos/demos.html
+++ b/src/views/demos/demos.html
@@ -2,9 +2,9 @@
   <h3>Demos</h3>
   <hr />
 
-  <a href="/demos/text-validator">
+  <!-- <a href="/demos/text-validator">
     <button class="btn btn-info"><h4>Text Validator</h4></button>
-  </a>
+  </a> -->
   <a href="/demos/xml-validator">
     <button class="btn btn-info"><h4>XML Validator</h4></button>
   </a>
