Enhance xml validator descriptions

--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="col">
         <h3>Error</h3>
-        <i>(files with no extension)</i>
+        <i>(files that cause crashes)</i>
         <iframe
           src="/demos/xml-validator/iframe/error"
           height="400"
@@ -54,7 +54,7 @@
       </div>
       <div class="col">
         <h3>Fail</h3>
-        <i>(.txt does not contain 1, 2, 3, or 4)</i>
+        <i>(xml data did not match schema)</i>
         <iframe
           src="/demos/xml-validator/iframe/fail"
           height="400"
@@ -66,7 +66,7 @@
     <div class="row">
       <div class="col">
         <h3>Ignore</h3>
-        <i>(has extension but is not .txt file)</i>
+        <i>(file is not xml)</i>
         <iframe
           src="/demos/xml-validator/iframe/ignore"
           height="400"
@@ -76,7 +76,7 @@
       </div>
       <div class="col">
         <h3>Pass</h3>
-        <i>(.txt file that contains 1, 2, 3, or 4)</i>
+        <i>(xml files that match the schema)</i>
         <iframe
           src="/demos/xml-validator/iframe/pass"
           height="400"
