--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -21,7 +21,9 @@
     <div class="col">
       <center>
         <h3>Input Directory</h3>
-        <i>(/root/project/data/input on host)</i><br />
+        <br />
+        <i>(/root/project/data/input on host)</i>
+        <br />
         <iframe
           src="/demos/xml-validator/iframe/input"
           height="400"
@@ -44,7 +46,9 @@
     <div class="row">
       <div class="col">
         <h3>Error</h3>
+        <br />
         <i>(files that cause crashes)</i>
+        <br />
         <iframe
           src="/demos/xml-validator/iframe/error"
           height="400"
@@ -54,7 +58,9 @@
       </div>
       <div class="col">
         <h3>Fail</h3>
+        <br />
         <i>(xml data did not match schema)</i>
+        <br />
         <iframe
           src="/demos/xml-validator/iframe/fail"
           height="400"
@@ -66,7 +72,9 @@
     <div class="row">
       <div class="col">
         <h3>Ignore</h3>
+        <br />
         <i>(file is not xml)</i>
+        <br />
         <iframe
           src="/demos/xml-validator/iframe/ignore"
           height="400"
@@ -76,7 +84,9 @@
       </div>
       <div class="col">
         <h3>Pass</h3>
+        <br />
         <i>(xml files that match the schema)</i>
+        <br />
         <iframe
           src="/demos/xml-validator/iframe/pass"
           height="400"
