Remove execute button

--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -8,12 +8,12 @@
   validator executes in the background every eight seconds.
 </p>
 
-<hr />
+<!-- <hr />
 <center>
   <a href="/demos/xml-validator/start"
     ><button class="btn btn-primary">Execute XML Validator Demo</button></a
   >
-</center>
+</center> -->
 <hr />
 
 <div class="container">
