--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -37,10 +37,10 @@
   This demo will showcase some xml validation. The server has a couple
   directories of interest, chiefly 'input' and 'output'. 'output' has four
   subfolders, 'error', 'fail', 'ignore', and 'pass'. Below you can see several
-  readouts of the directories in question involving the files within. The
-  directory iframes always refresh every 4 seconds. You can upload files to
-  input and you can download any of the files you see by clicking on them. The
-  validator executes in the background every eight seconds.
+  readouts of the directories in question involving the files within. You can
+  upload files to input and you can download any of the files you see by
+  clicking on them. The validator executes in the background every eight
+  seconds.
 </p>
 
 <hr />
