Hide populate button

--- a/src/views/demos/xml-validator/xml-validator.html
+++ b/src/views/demos/xml-validator/xml-validator.html
@@ -51,8 +51,8 @@
       <center>
         <h3>Input Directory</h3>
         <br />
-        <button onclick="populate('pass')">Populate Button</button>
-        <br />
+        <!-- <button onclick="populate('pass')">Populate Button</button>
+        <br /> -->
         <i>(/root/project/data/input on host)</i>
         <br />
         <div class="dir" id="input"></div>
