--- a/src/views/guides/docker/persistent-storage.html
+++ b/src/views/guides/docker/persistent-storage.html
@@ -5,8 +5,8 @@
   termination of the process.
 </p>
 <p>
-  If you want to write files to host memory from within the container and have a
-  file structure in your application that you want to use, then use the
+  If you want to write files to host storage from within the container and have
+  a file structure in your application that you want to use, then use the
   following command when you want to run your Docker container:
 </p>
 <code>docker run -v ${HOST PATH}:${CONTAINER PATH}</code>
